buttons added and some changes to search form

--- a/forms.html
+++ b/forms.html
@@ -6,6 +6,7 @@
 
     <link href="css/1140.css" rel="stylesheet">
     <link href="css/base.css" rel="stylesheet">
+    <link href="css/buttons.css" rel="stylesheet">
     <link href="css/forms.css" rel="stylesheet">
 
 </head>
@@ -317,7 +318,7 @@
       		<label>
 	      		<b>Search images</b>
 	      		<input type="search" placeholder="Search here..." tabindex="1" class="search">
-	      		<button type="submit">Go</button>
+	      		<button type="submit" class="btn">Go</button>
       		</label>
   		</form>
 
