change base for type, use <div> instead of <b>

--- a/buttons.html
+++ b/buttons.html
@@ -7,7 +7,7 @@
 	    <link href="css/1140.css" rel="stylesheet">
 
 		<!-- FSK components -->
-	    <link href="css/base.css" rel="stylesheet">
+	    <link href="css/type.css" rel="stylesheet">
 	    <link href="css/buttons.css" rel="stylesheet">
 
 		<!-- demo site specific -->
@@ -27,9 +27,9 @@
 			<h4>Different sizes</h4>
 			<p><a href="#" class="btn small">Small</a></p>
 			<p><a href="#" class="btn">Default</a></p>
-			<p><a href="#" class="btn large">Small</a></p>
+			<p><a href="#" class="btn large">Large</a></p>
 
-			
+
 		</div>
 	</body>
 </html>
