primary actions and 3D buttons

--- a/buttons.html
+++ b/buttons.html
@@ -29,6 +29,13 @@
 			<p><a href="#" class="btn">Default</a></p>
 			<p><a href="#" class="btn large">Large</a></p>
 
+			<h3>Primary call to action</h3>
+			<p><a href="#" class="btn primary">Press me</a></p>
+
+			<h3>...with 3D effect</h3>
+			<p><a href="#" class="btn small primary threeD">Push me down</a></p>
+			<p><a href="#" class="btn primary threeD">Push me down</a></p>
+			<p><a href="#" class="btn large primary threeD">Push me down</a></p>
 
 		</div>
 	</body>
