--- a/type.html
+++ b/type.html
@@ -2,9 +2,19 @@
 <html>
 	<head>
 	    <title>Buttons</title>
-	    <link href="css/1140.css" rel="stylesheet">
-	    <link href="css/base.css" rel="stylesheet">
+
+		<!-- 1140 grid - more info at http://cssgrid.net/ -->
+	    <link href="css/grid/1140.css" rel="stylesheet">
+        <link href="css/grid/ie.css" rel="stylesheet">
+
+		<!-- FSK components -->
+	    <link href="css/type.css" rel="stylesheet">
 	    <link href="css/buttons.css" rel="stylesheet">
+        <link href="css/forms.css" rel="stylesheet">
+
+		<!-- demo site specific -->
+		<link href="css/styles.css" rel="stylesheet">
+
 	</head>
 	<body>
 	    <div class="container content"><h1>HTML Ipsum Presents</h1>
