keep radios and checkboxes inline

--- a/forms.html
+++ b/forms.html
@@ -40,6 +40,10 @@
                 </label>
 
                 <label>
+                    <input type="checkbox" tabindex="1"> Accept the terms and conditions
+                </label>
+
+                <label>
                     Favourite beer
                     <select tabindex="1">
                         <option>Heineken</option>
