Revert "<i> needs to be normalised"
This reverts commit f51b4291fda77344712767ff7da185ed9a73193d.

--- a/forms.html
+++ b/forms.html
@@ -234,6 +234,64 @@
             </form>
 
             <hr>
+            <h3>Dimensions</h3>
+            <form class="inline_form">
+                <label>
+                    <div>Span 1</div>
+                    <input type="text" placeholder="12" tabindex="1" class="span1">
+                </label>
+                <label>
+                    <div>Span 2</div>
+                    <input type="text" placeholder="12" tabindex="1" class="span2">
+                </label>
+                <label>
+                    <div>Span 3</div>
+                    <input type="text" placeholder="123" tabindex="1" class="span3">
+                </label>
+                <label>
+                    <div>Span 4</div>
+                    <input type="text" placeholder="1234" tabindex="1" class="span4">
+                </label>
+                <label>
+                    <div>Span 5</div>
+                    <input type="text" placeholder="12345" tabindex="1" class="span5">
+                </label>
+                <label>
+                    <div>Span 6</div>
+                    <input type="text" placeholder="123456" tabindex="1" class="span6">
+                </label>
+                <label>
+                    <div>Span 7</div>
+                    <input type="text" placeholder="1234567" tabindex="1" class="span7">
+                </label>
+                <label>
+                    <div>Span 8</div>
+                    <input type="text" placeholder="1234" tabindex="1" class="span8">
+                </label>
+                <label>
+                    <div>Mini</div>
+                    <input type="text" placeholder="Name" tabindex="1" class="mini">
+                </label>
+                <label>
+                    <div>Small</div>
+                    <input type="text" placeholder="Name" tabindex="1" class="small">
+                </label>
+                <label>
+                    <div>Medium</div>
+                    <input type="text" placeholder="Name" tabindex="1">
+                    <span>(default)</span>
+                </label>
+                <label>
+                    <div>Large</div>
+                    <input type="text" placeholder="Name" tabindex="1" class="large">
+                </label>
+                <label>
+                    <div>Xlarge</div>
+                    <input type="text" placeholder="Name" tabindex="1" class="xl">
+                </label>
+            </form>
+
+            <hr>
             <h3>Prepended and appended inputs</h3>
 
             <form class="inline_form">
