Safari error with prepend, append

--- a/forms.html
+++ b/forms.html
@@ -101,6 +101,19 @@
                     <input type="text" placeholder="Email" tabindex="1">
                 </label>
 
+                <label>
+                    <div>Favourite beer</div>
+                    <select tabindex="1">
+                        <option>Heineken</option>
+                        <option>Carlsberg</option>
+                        <option>Stella Artois</option>
+                        <option>Cronenberg</option>
+                        <option>Guiness</option>
+                        <option>Amstel</option>
+                        <option>Corona</option>
+                    </select>
+                </label>
+
                 <div class="label_group">
                     <div>Which is better?</div>
                     <label>
