Force inline labels on a stacked form

--- a/forms.html
+++ b/forms.html
@@ -84,6 +84,20 @@
                         <input type="checkbox" name="notifications" value="giveaway" tabindex="1">Self driving cars for returning from events with free beer
                     </label>
                 </div>
+
+                <div class="label_group inline">
+                    Which is better?
+                    <label>
+                        <input type="radio" name="cartoons" value="simpsons" tabindex="1">The Simpsons
+                    </label>
+                    <label>
+                        <input type="radio" name="cartoons" value="family_guy" tabindex="1">Family Guy
+                    </label>
+                    <label>
+                        <input type="radio" name="cartoons" value="southpark" tabindex="1">Southpark
+                    </label>
+                </div>
+
             </form>
 
             <hr>
