Don't rely on button styling for search form

--- a/forms.html
+++ b/forms.html
@@ -351,11 +351,11 @@
 
             <hr>
             <h3>Search</h3>
-            <form class="inline_form">
+            <form class="search_form">
                 <label>
-                    <div>Search images</div>
+                    Search images
                     <input type="search" placeholder="Search here..." tabindex="1" class="search">
-                    <button type="submit" class="btn">Go</button>
+                    <button type="submit">Go</button>
                 </label>
             </form>
 
