Stop relying on .search

--- a/forms.html
+++ b/forms.html
@@ -354,7 +354,7 @@
             <form class="search_form">
                 <label>
                     Search images
-                    <input type="search" placeholder="Search here..." tabindex="1" class="search">
+                    <input type="search" placeholder="Search here..." tabindex="1">
                     <button type="submit">Go</button>
                 </label>
             </form>
