--- a/forms.html
+++ b/forms.html
@@ -331,6 +331,14 @@
                     <span>How much would you like to donate?<span>
                 </label>
 
+                <h5>With number input</h5>
+                <label>
+                    <div>Amount</div>
+                    <i class="prepend">$</i>
+                    <input type="number" placeholder="Amount" tabindex="1">
+                    <span>How much would you like to donate?<span>
+                </label>
+
                 <h4>Append</h4>
                 <label>
                     <div>Amount</div>
