--- a/type.html
+++ b/type.html
@@ -15,6 +15,12 @@
 		<!-- demo site specific -->
 		<link href="css/styles.css" rel="stylesheet">
 
+		<style>
+			body {
+				background: url("v_rythmn.gif");
+			}
+		</style>
+
 	</head>
 	<body>
 	    <div class="container content"><h1>HTML Ipsum Presents</h1>
