Change help_below to help-below

--- a/forms.html
+++ b/forms.html
@@ -213,7 +213,7 @@
 						Username
 						<input type="text" placeholder="Username" tabindex="1">
 					</label>
-					<label> 
+					<label>
 						Password
 						<input type="password" placeholder="Password" tabindex="1">
 					</label>
@@ -255,7 +255,7 @@
             </form>
 
             <h4>Inline form with help below</h4>
-            <form class="form-horizontal help_below">
+            <form class="form-horizontal help-below">
                 <label>
                     <div>Name</div>
                     <input type="text" placeholder="Name" tabindex="1">
