Change input_below to input-below

--- a/forms.html
+++ b/forms.html
@@ -163,7 +163,7 @@
                     </label>
                 </div>
 
-                <div class="label-group input_below">
+                <div class="label-group input-below">
                     <div>What kind of things would you like to to receive alerts about?</div>
                     <label>
                         <input type="checkbox" name="notifications" value="free_beer" tabindex="1">Parties with free beer
