File structure simplified for now and Ben's requests added
To start with there won't be separate CSS and Sass files included, this
will come later. The CSS is now generated from a .scss file that is
calling the Mosto files from a framework.
Stacked forms can have inline help
Prepend and Append works with stacked forms

--- a/forms.html
+++ b/forms.html
@@ -240,6 +240,20 @@
                 </label>
             </form>
 
+			<h5>Stacked with messages inline</h5>
+			<form class="help-inline">
+                <label>
+                    <div>Name</div>
+                    <input type="text" placeholder="Name" tabindex="1">
+                    <span>Please enter your full name</span>
+                </label>
+                <label>
+                    <div>Email address</div>
+                    <input type="email" placeholder="Email address" tabindex="1">
+                    <span>Must be a valid email address</span>
+                </label>
+            </form>
+
             <h4>Inline form with inline help</h4>
             <form class="form-horizontal">
                 <label>
@@ -382,6 +396,17 @@
                 </label>
 
                 <h4>Both</h4>
+                <label>
+                    <div>Amount</div>
+                    <i class="prepend">$</i>
+                    <input type="text" placeholder="Amount" tabindex="1" class="appended span3">
+                    <i class="append">.00</i>
+                    <span>How much would you like to donate?<span>
+                </label>
+			</form>
+
+			<form>
+				<h4>Both with a stacked form</h4>
                 <label>
                     <div>Amount</div>
                     <i class="prepend">$</i>
