--- a/forms.html
+++ b/forms.html
@@ -86,10 +86,10 @@
                         <input type="checkbox" name="notifications" value="free_beer" tabindex="1">Parties with free beer
                     </label>
                     <label>
-                        <input type="checkbox" name="notifications" value="monkey" tabindex="1">Car keys with built-in GPS tracking
+                        <input type="checkbox" name="notifications" value="gps" tabindex="1">Car keys with built-in GPS tracking
                     </label>
                     <label>
-                        <input type="checkbox" name="notifications" value="monkey" tabindex="1">Smart phone apps to help you find your car
+                        <input type="checkbox" name="notifications" value="apps" tabindex="1">Smart phone apps to help you find your car
                     </label>
                     <label>
                         <input type="checkbox" name="notifications" value="giveaway" tabindex="1">Self driving cars for returning from events with free beer
@@ -117,6 +117,21 @@
 					<label>
 						Password
 						<input type="password" placeholder="Password" tabindex="1">
+					</label>
+				</div>
+
+				<div class="label-group inline">
+					<label>
+						Day
+						<select>
+							<option>Monday</option>
+						</select>
+					</label>
+					<label>
+						Month
+						<select>
+							<option>January</option>
+						</select>
 					</label>
 				</div>
 
@@ -162,6 +177,19 @@
                         <input type="radio" name="cartoons" value="southpark" tabindex="1">Southpark
                     </label>
                 </div>
+
+				<label class="input-below">
+                    <div>Which of the following beers is your favourite?</div>
+                    <select tabindex="1">
+                        <option>Heineken</option>
+                        <option>Carlsberg</option>
+                        <option>Stella Artois</option>
+                        <option>Cronenberg</option>
+                        <option>Guiness</option>
+                        <option>Amstel</option>
+                        <option>Corona</option>
+                    </select>
+                </label>
 
                 <div class="label-group input-below">
                     <div>What kind of things would you like to to receive alerts about?</div>
@@ -231,12 +259,12 @@
                 <label>
                     Name
                     <input type="text" placeholder="Name" tabindex="1">
-                    <span>Please enter your full name</span>
+                    <span class="message">Please enter your full name</span>
                 </label>
                 <label>
                     Email address
                     <input type="email" placeholder="Email address" tabindex="1">
-                    <span>Must be a valid email address</span>
+                    <span class="message">Must be a valid email address</span>
                 </label>
             </form>
 
@@ -245,12 +273,12 @@
                 <label>
                     <div>Name</div>
                     <input type="text" placeholder="Name" tabindex="1">
-                    <span>Please enter your full name</span>
+                    <span class="message">Please enter your full name</span>
                 </label>
                 <label>
                     <div>Email address</div>
                     <input type="email" placeholder="Email address" tabindex="1">
-                    <span>Must be a valid email address</span>
+                    <span class="message">Must be a valid email address</span>
                 </label>
             </form>
 
@@ -259,26 +287,26 @@
                 <label>
                     <div>Name</div>
                     <input type="text" placeholder="Name" tabindex="1">
-                    <span>Please enter your full name</span>
+                    <span class="message">Please enter your full name</span>
                 </label>
                 <label>
                     <div>Email address</div>
                     <input type="email" placeholder="Email address" tabindex="1">
-                    <span>Must be a valid email address</span>
+                    <span class="message">Must be a valid email address</span>
                 </label>
             </form>
 
             <h4>Inline form with help below</h4>
-            <form class="form-horizontal help-below">
+            <form class="form-horizontal message-below">
                 <label>
                     <div>Name</div>
                     <input type="text" placeholder="Name" tabindex="1">
-                    <span>Please enter your full name</span>
+                    <span class="message">Please enter your full name</span>
                 </label>
                 <label>
                     <div>Email address</div>
                     <input type="email" placeholder="Email address" tabindex="1">
-                    <span>Must be a valid email address</span>
+                    <span class="message">Must be a valid email address</span>
                 </label>
             </form>
 
@@ -287,24 +315,24 @@
                 <label>
                     Name
                     <input type="text" placeholder="Name" tabindex="1">
-                    <span class="hint">Please enter your full name</span>
+                    <span class="message hint">Please enter your full name</span>
                 </label>
                 <label>
                     Email address
                     <input type="email" placeholder="Email address" tabindex="1">
-                    <span class="hint">Must be a valid email address</span>
+                    <span class="message hint">Must be a valid email address</span>
                 </label>
             </form>
             <form class="form-horizontal">
                 <label>
                     <div>Name</div>
                     <input type="text" placeholder="Name" tabindex="1">
-                    <span class="hint">Please enter your full name</span>
+                    <span class="message hint">Please enter your full name</span>
                 </label>
                 <label>
                     <div>Email address</div>
                     <input type="email" placeholder="Email address" tabindex="1">
-                    <span class="hint">Must be a valid email address</span>
+                    <span class="message hint">Must be a valid email address</span>
                 </label>
             </form>
 
@@ -376,7 +404,7 @@
                     <div>Amount</div>
                     <i class="prepend">$</i>
                     <input type="text" placeholder="Amount" tabindex="1" class="span3">
-                    <span>How much would you like to donate?<span>
+                    <span class="message">How much would you like to donate?<span>
                 </label>
 
                 <h5>With number input</h5>
@@ -384,7 +412,7 @@
                     <div>Amount</div>
                     <i class="prepend">$</i>
                     <input type="number" placeholder="Amount" tabindex="1">
-                    <span>How much would you like to donate?<span>
+                    <span class="message">How much would you like to donate?<span>
                 </label>
 
                 <h4>Append</h4>
@@ -392,7 +420,7 @@
                     <div>Amount</div>
                     <input type="text" placeholder="Amount" tabindex="1" class="appended span3">
                     <i class="append">&euro;</i>
-                    <span>How much would you like to donate?<span>
+                    <span class="message">How much would you like to donate?<span>
                 </label>
 
                 <h4>Both</h4>
@@ -401,7 +429,7 @@
                     <i class="prepend">$</i>
                     <input type="text" placeholder="Amount" tabindex="1" class="appended span3">
                     <i class="append">.00</i>
-                    <span>How much would you like to donate?<span>
+                    <span class="message">How much would you like to donate?<span>
                 </label>
 			</form>
 
@@ -412,7 +440,7 @@
                     <i class="prepend">$</i>
                     <input type="text" placeholder="Amount" tabindex="1" class="appended span3">
                     <i class="append">.00</i>
-                    <span>How much would you like to donate?<span>
+                    <span class="message">How much would you like to donate?<span>
                 </label>
             </form>
 
@@ -457,7 +485,7 @@
                 <label class="error">
                     Email address
                     <input type="email" value="bob@something.domain" tabindex="1">
-                    <span>Please use a valid email address</span>
+                    <span class="message">Please use a valid email address</span>
                 </label>
             </form>
 
@@ -466,7 +494,7 @@
                 <label class="error">
                     <div>Email address</div>
                     <input type="email" value="bob@something.domain" tabindex="1">
-                    <span>Please use a valid email address</span>
+                    <span class="message">Please use a valid email address</span>
                 </label>
             </form>
 
@@ -490,7 +518,7 @@
                         <input type="text" class="span2 appended" tabindex="1">
                         <i class="append">ext.</i>
                     </label>
-                    <span>Please fill in all fields</span>
+                    <span class="message">Please fill in all fields</span>
                 </div>
             </form>
 
