stop using codekit framework
All original scss files inside the main mosto folder, before it was
calling a framework.

--- a/forms.html
+++ b/forms.html
@@ -341,56 +341,72 @@
             <form class="form-horizontal">
                 <label>
                     <div>Span 1</div>
-                    <input type="text" placeholder="12" tabindex="1" class="span1">
+                    <input type="text" tabindex="1" class="span1">
                 </label>
                 <label>
                     <div>Span 2</div>
-                    <input type="text" placeholder="12" tabindex="1" class="span2">
+                    <input type="text" tabindex="1" class="span2">
                 </label>
                 <label>
                     <div>Span 3</div>
-                    <input type="text" placeholder="123" tabindex="1" class="span3">
+                    <input type="text" tabindex="1" class="span3">
                 </label>
                 <label>
                     <div>Span 4</div>
-                    <input type="text" placeholder="1234" tabindex="1" class="span4">
+                    <input type="text" tabindex="1" class="span4">
                 </label>
                 <label>
                     <div>Span 5</div>
-                    <input type="text" placeholder="12345" tabindex="1" class="span5">
+                    <input type="text" tabindex="1" class="span5">
                 </label>
                 <label>
                     <div>Span 6</div>
-                    <input type="text" placeholder="123456" tabindex="1" class="span6">
+                    <input type="text" tabindex="1" class="span6">
                 </label>
                 <label>
                     <div>Span 7</div>
-                    <input type="text" placeholder="1234567" tabindex="1" class="span7">
+                    <input type="text" tabindex="1" class="span7">
                 </label>
                 <label>
                     <div>Span 8</div>
-                    <input type="text" placeholder="1234" tabindex="1" class="span8">
+                    <input type="text" tabindex="1" class="span8">
+                </label>
+				<label>
+                    <div>Span 9</div>
+                    <input type="text" tabindex="1" class="span9">
+                </label>
+				<label>
+                    <div>Span 10</div>
+                    <input type="text" tabindex="1" class="span10">
+                </label>
+				<label>
+                    <div>Span 11</div>
+                    <input type="text" tabindex="1" class="span11">
+                </label>
+				<label>
+                    <div>Span 12</div>
+                    <input type="text" tabindex="1" class="span12">
                 </label>
                 <label>
                     <div>Mini</div>
-                    <input type="text" placeholder="Name" tabindex="1" class="mini">
+                    <input type="text" tabindex="1" class="mini">
                 </label>
                 <label>
                     <div>Small</div>
-                    <input type="text" placeholder="Name" tabindex="1" class="small">
+                    <input type="text" tabindex="1" class="small">
                 </label>
                 <label>
                     <div>Medium</div>
-                    <input type="text" placeholder="Name" tabindex="1">
+                    <input type="text" tabindex="1">
                     <span>(default)</span>
                 </label>
                 <label>
                     <div>Large</div>
-                    <input type="text" placeholder="Name" tabindex="1" class="large">
+                    <input type="text" tabindex="1" class="large">
                 </label>
                 <label>
                     <div>Xlarge</div>
-                    <input type="text" placeholder="Name" tabindex="1" class="xl">
+                    <input type="text" tabindex="1" class="xl">
                 </label>
             </form>
 
@@ -448,8 +464,8 @@
             <h3>Search</h3>
             <form>
                 <label>
-                    <input type="search" placeholder="Search here..." tabindex="1">
-                    <button type="submit">Go</button>
+                    <input type="search" class="search-input" placeholder="Search here..." tabindex="1">
+                    <button type="submit" class="search-submit">Go</button>
                 </label>
             </form>
 
@@ -488,7 +504,6 @@
                     <span class="message">Please use a valid email address</span>
                 </label>
             </form>
-
 
             <form class="form-horizontal">
                 <label class="error">
