support for <textarea> in horizontal forms

--- a/forms.html
+++ b/forms.html
@@ -139,7 +139,7 @@
 
             <hr>
 
-            <h3>Inline form - <small>All inputs and labels inline</small></h3>
+            <h3>Horizontal form - <small>All inputs and labels inline</small></h3>
             <form class="form-horizontal">
 
                 <label>
@@ -150,6 +150,11 @@
                 <label>
                     <div>Email</div>
                     <input type="text" placeholder="Email" tabindex="1">
+                </label>
+
+				<label>
+                    <div>Your message</div>
+                    <textarea tabindex="1"></textarea>
                 </label>
 
                 <label>
